<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Genie</string>
    <string name="wish">Wish!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_new">New</string>
    <string name="action_edit">Edit</string>
    <string name="save">Save</string>
    <string name="update">Update</string>

    <!-- Add screen strings -->
    <string name="category_text">I Wish To </string>
    <string name="title_text">Where</string>
    <string name="whWord_hint">"Where" or "To" or "With"</string>
    <string name="description_text">Description</string>
    <string name="end_date_text">Accomplish By</string>
    <string name="fields_mendatory">All fields are mandatory</string>

    <!-- Main screen strings -->
    <string name="divider">divider</string>
    
    <!-- Tasks screen strings -->
    <string name="tasks">Tasks</string>
    <string name="task">Task</string>
    <string name="taskNotes_hint">Notes for task</string>
    <string name="add_task_success">Added a new Task!</string>
    <string name="update_task_success">Updated Task!</string>
    <string name="delete_task_success">Deleted Task!</string>
    <string name="completion">Completion</string>

    <!-- Add wish string -->
    <string name="add_wish_success">Added a new Wish!</string>
    <string name="update_wish_success">Updated Wish!</string>
    <string name="delete_wish_success">Deleted Wish!</string>
    <string name="delete">Delete</string>
    <string name="are_u_sure_delete">Delete?</string>
    <string name="add_new_category">New Category</string>
    <string name="create">Create</string>
    <string name="create_category_successful">Created category</string>
    <string name="something_went_wrong">Something went wrong!\nPlease try later</string>

    <!-- Welcome screen messages -->
    <string name="welcome">Welcome to Genie!</string>
    <string name="what_can_i_do_for_you">Hukum Mere Aaka!</string>
    <string name="genie_intro">        Genie records your wishes.\n
        \tWishes do come true!</string>
    <string name="helpText">
		<![CDATA[
		        The first step in realizing your dreams is to record all your wishes.<br/>
		<b>Genie</b> helps you do that!<br/><br/>
		
		Genie let\'s you categories your wishes.<br/>
		Either select from the defualt categories or create your own.<br/>
		<br/>
		
		A very simple and easy to use UI with following features:<br/> 
		<br/>
		\t1) Add/update wish with category, description and deadline<br/>
		\t2) Pre-created categories to choose from<br/>
		\t3) Create new Category<br/>
		\t4) Swipe right to delete<br/>
		\t5) Add Tasks to wish<br/>
		\t6) Track task completion<br/>
		<br/><br/>
		Make a <b>Wish</b> and Genie will fulfill them all!<br/>
		<br/>]]>
    </string>

</resources>