<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_opaque"
    android:orientation="vertical"
    android:padding="12dp" >

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task"
        android:maxLines="1"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/taskNotes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/taskNotes_hint"
        android:inputType="textMultiLine" >
    </EditText>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/create"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/create" />
    </LinearLayout>

</LinearLayout>